add link to templtes

--- a/index.html
+++ b/index.html
@@ -445,72 +445,62 @@
 
 <p><a href="https://drive.google.com/open?id=1-XzyEAT7XKWKNse9SsniCSoG5MPq3RVG">NFB Brand Platform</a></p>
 
-<h1 id="style-guide-outline">Style guide Outline</h1>
-<h2 id="balmoral-style-on-nfb-platforms">Balmoral style on NFB platforms</h2>
+<!--
+# Style guide Outline
+## Balmoral style on NFB platforms
 
-<ul>
-  <li>Background eyecon</li>
-  <li>Color matching: image &amp; interface</li>
-  <li>The play button</li>
-</ul>
+- Background eyecon
+- Color matching: image & interface
+- The play button
 
-<h3 id="basics">Basics</h3>
-<ul>
-  <li>Typographie</li>
-  <li>Colours</li>
-  <li>Layout</li>
-  <li>Icons</li>
-</ul>
+### Basics
+- Typographie
+- Colours
+- Layout
+- Icons
 
-<h3 id="components">Components</h3>
-<ul>
-  <li>Alerts</li>
-  <li>labels</li>
-  <li>badges</li>
-  <li>Buttons</li>
-  <li>Player</li>
-  <li>Navigation</li>
-  <li>tabs</li>
-  <li>navbars</li>
-  <li>pagination</li>
-  <li>footer</li>
-  <li>Vignettes/Cards</li>
-  <li>vignettes</li>
-  <li>carousel</li>
-  <li>users
-    <h3 id="utilities">Utilities</h3>
-  </li>
-  <li>Tooltips</li>
-  <li>Pop over</li>
-  <li>Modals</li>
-  <li>Collaps</li>
-  <li>Scroll-To</li>
-  <li>Show/Hide</li>
-</ul>
+### Components
+- Alerts
+- labels
+- badges
+- Buttons
+- Player
+- Navigation
+ - tabs
+ - navbars
+ - pagination
+ - footer
+- Vignettes/Cards
+ - vignettes
+ - carousel
+ - users
+### Utilities
+- Tooltips
+- Pop over
+- Modals
+- Collaps
+- Scroll-To
+- Show/Hide
 
-<h3 id="templates">Templates</h3>
+### Templates
 
-<ul>
-  <li>Hero Page</li>
-</ul>
+- Hero Page
 
-<h2 id="nfbca-assets">NFB.ca assets</h2>
-<p>Specs for the various assest found on the nfb platforms</p>
+## NFB.ca assets
+Specs for the various assest found on the nfb platforms
 
-<ul>
-  <li>Features and Banners</li>
-  <li>Directors profiles</li>
-  <li>Blog posts</li>
-</ul>
+- Features and Banners
+- Directors profiles
+- Blog posts
 
-<h3 id="graphic-templates">Graphic Templates</h3>
+### Graphic Templates
 
-<h2 id="film-promotion">Film promotion</h2>
-<p>Specs for the production of the requiered assets for movie promotion on the diffrents NFB platforms</p>
 
-<ul>
-  <li>(pdf)</li>
-</ul>
+## Film promotion
+Specs for the production of the requiered assets for movie promotion on the diffrents NFB platforms
+
+- (pdf)
+-->
 
 
           
