--- a/index.html
+++ b/index.html
@@ -445,6 +445,10 @@
 
 <p><a href="https://drive.google.com/open?id=1-XzyEAT7XKWKNse9SsniCSoG5MPq3RVG">NFB Brand Platform</a></p>
 
+<h2 id="style-guide-on-nfbca">Style Guide on NFB.ca</h2>
+
+<p><a href="https://www.nfb.ca/styleguide">NFB Style Guide</a> (authorization required)</p>
+
 <!--
 # Style guide Outline
 ## Balmoral style on NFB platforms
